--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pi-pins",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "GPIO (with interrupts) for embedded Linux machines like Raspberry Pi and BeagleBone",
   "main": "index.js",
   "scripts": {
@@ -8,19 +8,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/natevw/pi-pins.git"
+    "url": "https://github.com/FFsim/pi-pins.git"
   },
   "keywords": [
     "gpio",
     "raspi"
   ],
-  "author": "Nathan Vander Wilt",
+  "author": "Simone",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/natevw/pi-pins/issues"
+    "url": "https://github.com/FFsim/pi-pins/issues"
   },
-  "homepage": "https://github.com/natevw/pi-pins",
+  "homepage": "https://github.com/FFsim/pi-pins",
   "dependencies": {
-    "epoll": "^0.1.3"
+    "epoll": "^3.0.0"
   }
 }
